--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
@@ -46,6 +46,8 @@
   <add name="MyDb" connectionString="Provider=Microsoft.ACE.OLEDB.16.0;&#xD;&#xA;                         Data Source=|DataDirectory|\dbWebSystem.accdb;"
    providerName="System.Data.OleDb" />
   <add name="ConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Users\Useer\source\repos\IbanaWebSystem22526\dbWebSystem.accdb;Persist Security Info=True;Jet OLEDB:Database Password=1234"
+   providerName="System.Data.OleDb" />
+  <add name="ConnectionString2" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Users\User\source\repos\IbanaWebSystem22526\dbWebSystem.accdb;Persist Security Info=True;Jet OLEDB:Database Password=1234"
    providerName="System.Data.OleDb" />
  </connectionStrings>
 
